Implement seasonal transfer.